# exchange-simulator

./: .gitignore  Benchmarks.md  CMakeLists.txt  README.md  benchmark.sh  perf.data  perf.data.old
benchmarks/: bm_matching_engine.cpp  bm_orderbook.cpp  bm_ring_buffer.cpp  bm_serializer.cpp
docs/improvements/: 03-epoll-concurrency.md  04-flat-arrays-write-batching.md  05-multithreaded-architecture.md  06-lock-free-ring-buffer.md  07-client-pipelining-read-batching.md  08-fixed-size-messages-allocation-reduction.md  nagles_algorithm.md  pre_allocated_buffers.md
include/: acknowledgement.hpp  binary_serializer.hpp  client_state.hpp  exchange_client.hpp  exchange_server.hpp  inbound_message.hpp  matching_engine.hpp  message.hpp  network_utils.hpp  order.hpp  order_processor.hpp  order_simulator.hpp  orderbook.hpp  outbound_message.hpp  rejection.hpp  serializer.hpp  spsc_ring_buffer.hpp  thread_safe_queue.hpp  trade.hpp  types.hpp
src/: binary_serializer.cpp  client_main.cpp  exchange_client.cpp  exchange_server.cpp  main.cpp  matching_engine.cpp  network_utils.cpp  order_processor.cpp  order_simulator.cpp  orderbook.cpp
tests/: test_matching_engine.cpp  test_order.cpp  test_orderbook.cpp  test_ring_buffer.cpp  test_serializer.cpp
